--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "launcher-react-component-library",
-  "version": "0.0.1",
+  "name": "@hsqza/react-component-library",
+  "version": "0.0.44",
   "description": "UI react component library",
   "scripts": {
     "rollup": "rollup -c"
@@ -12,15 +12,28 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/react": "^18.0.15",
+    "@types/styled-components": "^5.1.25",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.77.2",
     "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/hsqza"
+  }
 }
