--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
   "name": "@hsqza/react-component-library",
-  "version": "0.0.79",
+  "version": "0.0.80",
   "description": "UI react component library",
   "scripts": {
     "rollup": "rollup -c",
-    "build": "npm run rollup && npm publish"
+    "build": "npm run rollup && npm publish",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "P&G",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack4": "^6.5.10",
+    "@storybook/manager-webpack4": "^6.5.10",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.15",
     "@types/styled-components": "^5.1.25",
+    "babel-loader": "^8.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^2.77.2",
