--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hsqza/react-component-library",
-  "version": "0.0.94",
+  "version": "0.0.97",
   "description": "UI react component library",
   "scripts": {
     "rollup": "rollup -c",
@@ -26,11 +26,15 @@
     "@types/react": "^18.0.17",
     "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.5",
+    "postcss": "^8.4.16",
+    "postcss-import": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^2.77.2",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-sass": "^1.2.13",
     "rollup-plugin-terser": "^7.0.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4"
